<resources>
    <string name="app_name">Digital Coin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="watch_list">Watch List</string>
    <string name="market">Market</string>
    <string name="home">Home</string>
    <string name="home_fragment">home fragment</string>
    <string name="profile">profile</string>
    <string name="market_fragment">market fragment</string>
    <string name="watch_fragment">watch fragment</string>
    <string name="image_of_digital_coin">image of digital coin</string>
    <string name="item_not_found">item not found</string>
    <string name="search">search</string>
    <string name="chart">chart</string>
    <string name="coin_logo">coin logo</string>
    <string name="market_up_down_icon">market up down icon</string>
    <string name="volume_icon">volume icon</string>
    <string name="btc_dominance">BTC Dominance</string>
    <string name="percent">%</string>
    <string name="market_cap">Market Cap</string>
    <string name="_24h_volume">24h Volume</string>
    <string name="market_cap_icon">market cap icon</string>
    <string name="exit">Exit</string>
    <string name="app_logo">app logo</string>
    <string name="powered_sajad_zarini_inspired_by_besenior">Develop By Sajad Zarini &amp; Inspired by BeSenior</string>
    <string name="getting_data">Getting Data…</string>
    <string name="connection_lost">Internet Connection lost…</string>
    <string name="settings">Settings</string>
    <string name="about_us">about us</string>
    <string name="privacy_policy">privacy policy</string>
    <string name="sajad_zarini">Sajad Zarini</string>
    <string name="example_mail_com">example@mail.com</string>
    <string name="set_your_profile_name">set your name in profile</string>
    <string name="what_we_collect">Personal Information Provided by You. We collect firstnames,lastnames and email addresses</string>
    <string name="why_collect">We process your information for purposes based on legitimate business interests, the fulfillment of our contract with you, compliance with our legal obligations, and your consent.</string>
    <string name="where_share">We only share information with your consent, to comply with laws, to provide you with services, to protect your rights, or to fulfill business obligations</string>
    <string name="privacy_3">3. will your information be shared with anyone?</string>
    <string name="privacy_2">2. how do we use your information?</string>
    <string name="privacy_1">1. What information do we collect?</string>
    <string name="instagram_id">instagram.com/besenior.academy</string>
    <string name="youtube_id">Channel: besenior</string>
    <string name="telegram_id">t.me/mhm555</string>
    <string name="contact_us">Contact us</string>
    <string name="about_us_description">besenior Academy is a collection of expert developers Aims to provide world users with easier access to information in various fields of Crypto currencies, health, weather, etc.</string>
    <string name="about_us_description_2">Information is power And we will be happy for all users in the world to have quick and easy access to resources</string>
    <string name="telegram">telegram</string>
    <string name="dark_mode">DarkMode</string>
    <string name="language">language</string>
    <string name="version">Version</string>
    <string name="change_photo">Change Photo</string>
    <string name="save">save</string>
    <string name="first_name">First Name</string>
    <string name="mail">mail</string>
    <string name="last_name">Last Name</string>
    <string name="bookmark_btn">BookMarkBtn</string>
    <string name="back_button">backButton</string>
    <string name="change_icon">ChangeIcon</string>
    <string name="_15m">15m</string>
    <string name="_1h">1h</string>
    <string name="Daily">D</string>
    <string name="weekly">W</string>
    <string name="monthly">M</string>
    <string name="_1d">1D</string>
    <string name="_1m">1M</string>
    <string name="_1w">1W</string>
    <string name="_4h">4h</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="there_is_no_item">there is no Item</string>
    <string name="status_change">status change</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
</resources>