<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinate_market"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/collapsing_appbar_bg">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:background="@android:color/transparent"
            android:elevation="0dp"
            app:elevation="0dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_market_tb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
                app:toolbarId="@+id/market_tb">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@drawable/collapsing_appbar_bg"
                    app:layout_collapseMode="pin"
                    app:menu="@menu/toolbar_menu"
                    app:navigationIcon="@drawable/baseline_sort_24" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="?attr/actionBarSize"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.8">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/marketCapCon"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/VolumeCon"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/CryptoMarketCap"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="5dp"
                            android:textColor="#FFFFFF"
                            android:textSize="14sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView"
                            tools:text="$1.16B" />

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="25dp"
                            android:text="@string/market_cap"
                            android:textColor="#BCBCBC"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/MarketCapChange"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            app:layout_constraintStart_toEndOf="@id/marketCapIcon"
                            app:layout_constraintTop_toBottomOf="@id/CryptoMarketCap" />

                        <ImageView
                            android:id="@+id/marketCapIcon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            app:layout_constraintBottom_toBottomOf="@id/MarketCapChange"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@id/MarketCapChange"
                            android:contentDescription="@string/market_cap_icon" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/VolumeCon"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/BTCdCon"
                        app:layout_constraintStart_toEndOf="@id/marketCapCon"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/CryptoVolume"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="5dp"
                            android:textColor="#FFFFFF"
                            android:textSize="14sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView5"
                            tools:text="$191B" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="25dp"
                            android:text="@string/_24h_volume"
                            android:textColor="#BCBCBC"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/VolumeChange"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            app:layout_constraintStart_toEndOf="@id/VolumeIcon"
                            app:layout_constraintTop_toBottomOf="@id/CryptoVolume" />

                        <ImageView
                            android:id="@+id/VolumeIcon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            app:layout_constraintBottom_toBottomOf="@id/VolumeChange"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@id/VolumeChange"
                            android:contentDescription="@string/volume_icon"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/BTCdCon"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/VolumeCon"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/CryptoBTCD"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="5dp"
                            android:textColor="#FFFFFF"
                            android:textSize="14sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView8"
                            tools:text="60.09%" />

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="25dp"
                            android:text="@string/btc_dominance"
                            android:textColor="#BCBCBC"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/BTCChange"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            app:layout_constraintStart_toEndOf="@id/BTCDIcon"
                            app:layout_constraintTop_toBottomOf="@id/CryptoBTCD" />

                        <ImageView
                            android:id="@+id/BTCDIcon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            app:layout_constraintBottom_toBottomOf="@id/BTCChange"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@id/BTCChange"
                            android:importantForAccessibility="no" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>


            </com.google.android.material.appbar.CollapsingToolbarLayout>


        </com.google.android.material.appbar.AppBarLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/market_con"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/nested_scroll_bg"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context=".UI.MarketFragment.MarketFragment">

            <TextView
                android:id="@+id/item_not_found_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_not_found"
                android:textColor="#B3B3B3"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/search_box_con"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/searchEdittext"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/search_box_bg"
                    android:ems="10"
                    android:hint="@string/search"
                    android:inputType="textPersonName"
                    android:paddingStart="30dp"
                    android:singleLine="true"
                    android:textColor="#FFFFFF"
                    android:textColorHighlight="#632DFF"
                    android:textColorHint="#FFFFFF"
                    android:textColorLink="#4E00BA"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="RtlSymmetry" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/marketRv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layoutAnimation="@anim/layout_anim"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_box_con" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>